:lipstick: Cleaned styles for new UI

--- a/frontend/resources/styles/common/refactor/fonts.scss
+++ b/frontend/resources/styles/common/refactor/fonts.scss
@@ -16,6 +16,7 @@ $fs-12: math.div(12, $fs-base) + rem;
 $fs-14: math.div(14, $fs-base) + rem;
 $fs-16: math.div(16, $fs-base) + rem;
 $fs-24: math.div(24, $fs-base) + rem;
+$fs-36: math.div(36, $fs-base) + rem;
 
 // Font weight
 $fw400: 400; // Regular (CSS value: 'normal')
