--- a/frontend/resources/styles/common/refactor/spacing.scss
+++ b/frontend/resources/styles/common/refactor/spacing.scss
@@ -10,77 +10,142 @@ $s-0: 0px;
 $s-1: 1px;
 $s-2: math.div(0.25rem, 2);
 $s-3: calc($s-1 + $s-2);
-$s-4: var(--s-4);
-$s-6: calc($s-2 + $s-4);
-$s-8: calc(var(--s-4) * 2);
-$s-12: calc(var(--s-4) * 3);
-$s-16: calc(var(--s-4) * 4);
-$s-20: calc(var(--s-4) * 5);
-$s-24: calc(var(--s-4) * 6);
-$s-28: calc(var(--s-4) * 7);
-$s-32: calc(var(--s-4) * 8);
-$s-36: calc(var(--s-4) * 9);
-$s-40: calc(var(--s-4) * 10);
-$s-44: calc(var(--s-4) * 11);
-$s-48: calc(var(--s-4) * 12);
-$s-52: calc(var(--s-4) * 13);
-$s-56: calc(var(--s-4) * 14);
-$s-60: calc(var(--s-4) * 15);
-$s-64: calc(var(--s-4) * 16);
-$s-68: calc(var(--s-4) * 17);
-$s-72: calc(var(--s-4) * 18);
-$s-76: calc(var(--s-4) * 19);
-$s-80: calc(var(--s-4) * 20);
-$s-84: calc(var(--s-4) * 21);
-$s-92: calc(var(--s-4) * 23);
-$s-96: calc(var(--s-4) * 24);
-$s-100: calc(var(--s-4) * 25);
-$s-104: calc(var(--s-4) * 26);
-$s-108: calc(var(--s-4) * 27);
-$s-116: calc(var(--s-4) * 29);
-$s-120: calc(var(--s-4) * 30);
-$s-124: calc(var(--s-4) * 31);
-$s-128: calc(var(--s-4) * 32);
-$s-136: calc(var(--s-4) * 34);
-$s-140: calc(var(--s-4) * 35);
-$s-148: calc(var(--s-4) * 37);
-$s-156: calc(var(--s-4) * 39);
-$s-152: calc(var(--s-4) * 38);
-$s-160: calc(var(--s-4) * 40);
-$s-168: calc(var(--s-4) * 42);
-$s-172: calc(var(--s-4) * 43);
-$s-180: calc(var(--s-4) * 45);
-$s-184: calc(var(--s-4) * 46);
-$s-188: calc(var(--s-4) * 47);
-$s-192: calc(var(--s-4) * 48);
-$s-196: calc(var(--s-4) * 49);
-$s-200: calc(var(--s-4) * 50);
-$s-216: calc(var(--s-4) * 54);
-$s-220: calc(var(--s-4) * 55);
-$s-228: calc(var(--s-4) * 57);
-$s-240: calc(var(--s-4) * 60);
-$s-248: calc(var(--s-4) * 62);
-$s-252: calc(var(--s-4) * 63);
-$s-256: calc(var(--s-4) * 64);
-$s-260: calc(var(--s-4) * 65);
-$s-272: calc(var(--s-4) * 68);
-$s-276: calc(var(--s-4) * 69);
-$s-280: calc(var(--s-4) * 70);
-$s-284: calc(var(--s-4) * 71);
-$s-300: calc(var(--s-4) * 75);
-$s-320: calc(var(--s-4) * 80);
-$s-348: calc(var(--s-4) * 87);
-$s-356: calc(var(--s-4) * 89);
-$s-364: calc(var(--s-4) * 91);
-$s-380: calc(var(--s-4) * 95);
-$s-400: calc(var(--s-4) * 100);
-$s-408: calc(var(--s-4) * 102);
-$s-440: calc(var(--s-4) * 110);
-$s-480: calc(var(--s-4) * 120);
-$s-500: calc(var(--s-4) * 125);
-$s-512: calc(var(--s-4) * 128);
-$s-520: calc(var(--s-4) * 130);
-$s-640: calc(var(--s-4) * 160);
-$s-664: calc(var(--s-4) * 166);
-$s-712: calc(var(--s-4) * 178);
-$s-736: calc(var(--s-4) * 184);
+$s-4: 0.25rem;
+$s-6: #{0.25 + math.div(0.25, 2)}rem;
+
+// To calculate:
+// https://docs.google.com/spreadsheets/d/1YVEfudB3bdO2ZOo5azZLJzZgA0Fkt1C85-1jVjuSYXg/edit?usp=sharing
+$s-8: #{0.25 * 2}rem;
+$s-12: #{0.25 * 3}rem;
+$s-16: #{0.25 * 4}rem;
+$s-20: #{0.25 * 5}rem;
+$s-24: #{0.25 * 6}rem;
+$s-28: #{0.25 * 7}rem;
+$s-32: #{0.25 * 8}rem;
+$s-36: #{0.25 * 9}rem;
+$s-40: #{0.25 * 10}rem;
+$s-44: #{0.25 * 11}rem;
+$s-48: #{0.25 * 12}rem;
+$s-52: #{0.25 * 13}rem;
+$s-56: #{0.25 * 14}rem;
+$s-60: #{0.25 * 15}rem;
+$s-64: #{0.25 * 16}rem;
+$s-68: #{0.25 * 17}rem;
+$s-72: #{0.25 * 18}rem;
+$s-76: #{0.25 * 19}rem;
+$s-80: #{0.25 * 20}rem;
+$s-84: #{0.25 * 21}rem;
+$s-88: #{0.25 * 22}rem;
+$s-92: #{0.25 * 23}rem;
+$s-96: #{0.25 * 24}rem;
+$s-100: #{0.25 * 25}rem;
+$s-104: #{0.25 * 26}rem;
+$s-108: #{0.25 * 27}rem;
+$s-112: #{0.25 * 28}rem;
+$s-116: #{0.25 * 29}rem;
+$s-120: #{0.25 * 30}rem;
+$s-124: #{0.25 * 31}rem;
+$s-128: #{0.25 * 32}rem;
+$s-132: #{0.25 * 33}rem;
+$s-136: #{0.25 * 34}rem;
+$s-140: #{0.25 * 35}rem;
+$s-144: #{0.25 * 36}rem;
+$s-148: #{0.25 * 37}rem;
+$s-152: #{0.25 * 38}rem;
+$s-156: #{0.25 * 39}rem;
+$s-160: #{0.25 * 40}rem;
+$s-164: #{0.25 * 41}rem;
+$s-168: #{0.25 * 42}rem;
+$s-172: #{0.25 * 43}rem;
+$s-176: #{0.25 * 44}rem;
+$s-180: #{0.25 * 45}rem;
+$s-184: #{0.25 * 46}rem;
+$s-188: #{0.25 * 47}rem;
+$s-192: #{0.25 * 48}rem;
+$s-196: #{0.25 * 49}rem;
+$s-200: #{0.25 * 50}rem;
+$s-204: #{0.25 * 51}rem;
+$s-208: #{0.25 * 52}rem;
+$s-212: #{0.25 * 53}rem;
+$s-216: #{0.25 * 54}rem;
+$s-220: #{0.25 * 55}rem;
+$s-224: #{0.25 * 56}rem;
+$s-228: #{0.25 * 57}rem;
+$s-232: #{0.25 * 58}rem;
+$s-236: #{0.25 * 59}rem;
+$s-240: #{0.25 * 60}rem;
+$s-244: #{0.25 * 61}rem;
+$s-248: #{0.25 * 62}rem;
+$s-252: #{0.25 * 63}rem;
+$s-256: #{0.25 * 64}rem;
+$s-260: #{0.25 * 65}rem;
+$s-264: #{0.25 * 66}rem;
+$s-268: #{0.25 * 67}rem;
+$s-272: #{0.25 * 68}rem;
+$s-276: #{0.25 * 69}rem;
+$s-280: #{0.25 * 70}rem;
+$s-284: #{0.25 * 71}rem;
+$s-288: #{0.25 * 72}rem;
+$s-292: #{0.25 * 73}rem;
+$s-296: #{0.25 * 74}rem;
+$s-300: #{0.25 * 75}rem;
+$s-304: #{0.25 * 76}rem;
+$s-308: #{0.25 * 77}rem;
+$s-312: #{0.25 * 78}rem;
+$s-316: #{0.25 * 79}rem;
+$s-320: #{0.25 * 80}rem;
+$s-324: #{0.25 * 81}rem;
+$s-328: #{0.25 * 82}rem;
+$s-332: #{0.25 * 83}rem;
+$s-336: #{0.25 * 84}rem;
+$s-340: #{0.25 * 85}rem;
+$s-344: #{0.25 * 86}rem;
+$s-348: #{0.25 * 87}rem;
+$s-352: #{0.25 * 88}rem;
+$s-356: #{0.25 * 89}rem;
+$s-360: #{0.25 * 90}rem;
+$s-364: #{0.25 * 91}rem;
+$s-368: #{0.25 * 92}rem;
+$s-372: #{0.25 * 93}rem;
+$s-376: #{0.25 * 94}rem;
+$s-380: #{0.25 * 95}rem;
+$s-384: #{0.25 * 96}rem;
+$s-388: #{0.25 * 97}rem;
+$s-392: #{0.25 * 98}rem;
+$s-396: #{0.25 * 99}rem;
+$s-400: #{0.25 * 100}rem;
+$s-404: #{0.25 * 101}rem;
+$s-408: #{0.25 * 102}rem;
+$s-412: #{0.25 * 103}rem;
+$s-416: #{0.25 * 104}rem;
+$s-420: #{0.25 * 105}rem;
+$s-424: #{0.25 * 106}rem;
+$s-428: #{0.25 * 107}rem;
+$s-432: #{0.25 * 108}rem;
+$s-436: #{0.25 * 109}rem;
+$s-440: #{0.25 * 110}rem;
+$s-444: #{0.25 * 111}rem;
+$s-448: #{0.25 * 112}rem;
+$s-452: #{0.25 * 113}rem;
+$s-456: #{0.25 * 114}rem;
+$s-460: #{0.25 * 115}rem;
+$s-464: #{0.25 * 116}rem;
+$s-468: #{0.25 * 117}rem;
+$s-472: #{0.25 * 118}rem;
+$s-476: #{0.25 * 119}rem;
+$s-480: #{0.25 * 120}rem;
+$s-484: #{0.25 * 121}rem;
+$s-488: #{0.25 * 122}rem;
+$s-492: #{0.25 * 123}rem;
+$s-496: #{0.25 * 124}rem;
+$s-500: #{0.25 * 125}rem;
+$s-512: #{0.25 * 128}rem;
+$s-520: #{0.25 * 130}rem;
+$s-580: #{0.25 * 145}rem;
+$s-612: #{0.25 * 153}rem;
+$s-640: #{0.25 * 160}rem;
+$s-664: #{0.25 * 166}rem;
+$s-712: #{0.25 * 178}rem;
+$s-736: #{0.25 * 184}rem;
+$s-800: #{0.25 * 200}rem;
+$s-1000: #{0.25 * 250}rem;
