--- a/frontend/src/app/main/ui/dashboard/comments.scss
+++ b/frontend/src/app/main/ui/dashboard/comments.scss
@@ -1,526 +1,131 @@
-@import "common/dependencies/colors";
-$fs12: 0.75rem;
-$fs14: 0.875rem;
-$size-2: 0.5rem;
-$size-4: 1rem;
-$size-5: 1.5rem;
-$br2: 2px;
-$br3: 3px;
-$fw400: 400;
-$fw700: 700;
+// This Source Code Form is subject to the terms of the Mozilla Public
+// License, v. 2.0. If a copy of the MPL was not distributed with this
+// file, You can obtain one at http://mozilla.org/MPL/2.0/.
+//
+// Copyright (c) KALEIDOS INC
 
-.dropdown {
-  position: absolute;
-  max-height: 30rem;
-  background-color: #ffffff;
-  border-radius: 2px;
-  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.25);
-  z-index: 12;
-
-  background-color: #212426;
-  border: 1px solid #2e3434;
-  border-radius: 8px;
-  min-width: 252px;
-
-  hr {
-    margin: 0;
-    border-color: #e3e3e3;
-  }
-}
-
-.comments-section {
-  .thread-bubble {
-    position: absolute;
-    display: flex;
-    transform: translate(-15px, -15px);
-
-    cursor: pointer;
-    pointer-events: auto;
-    background-color: $color-gray-10;
-    color: $color-gray-60;
-    border: 1px solid #b1b2b5;
-    box-sizing: border-box;
-    box-shadow: 0px 4px 4px rgba($color-black, 0.25);
-
-    font-size: $fs12;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    &.resolved {
-      color: $color-gray-10;
-      background-color: $color-gray-50;
-    }
-
-    &.unread {
-      background-color: $color-primary;
-    }
-    span {
-      user-select: none;
-    }
-  }
-
-  .thread-content {
-    position: absolute;
-    pointer-events: auto;
-    margin-left: 10px;
-    background: $color-white;
-    border: 1px solid $color-gray-20;
-    box-sizing: border-box;
-    box-shadow: 0px 2px 8px rgba($color-black, 0.25);
-    border-radius: $br2;
-    min-width: 280px;
-    max-width: 280px;
-    user-select: text;
-
-    .comments {
-      max-height: 420px;
-      min-height: 105px;
-      overflow-y: auto;
-    }
-
-    hr {
-      border: 0;
-      height: 1px;
-      background-color: $color-gray-20;
-      margin: 0px 10px;
-    }
-  }
-
-  .reply-form {
-    display: flex;
-    padding: 10px;
-    flex-direction: column;
-
-    &.edit-form {
-      padding-bottom: 0px;
-    }
-
-    textarea {
-      font-family: "worksans", sans-serif;
-      font-size: $fs12;
-      min-height: 32px;
-      outline: none;
-      overflow: hidden;
-      padding: $size-2;
-      resize: none;
-      width: 100%;
-      border-radius: $br2;
-      border: 1px solid $color-gray-20;
-      max-height: 4rem;
-    }
-
-    .buttons {
-      margin-top: 10px;
-      display: flex;
-      justify-content: flex-end;
-
-      input {
-        margin: 0px;
-        font-size: $fs14;
-
-        &:not(:last-child) {
-          margin-right: 6px;
-        }
-      }
-    }
-  }
-
-  .comment-container {
-    position: relative;
-  }
-
-  .comment {
-    display: flex;
-    flex-direction: column;
-    padding: $size-4 $size-2;
-
-    .author {
-      display: flex;
-      align-items: center;
-      height: 26px;
-      max-height: 26px;
-      position: relative;
-
-      .name {
-        display: flex;
-        flex-direction: column;
-
-        .fullname {
-          font-weight: $fw700;
-          color: $color-gray-60;
-          font-size: $fs12;
-
-          // @include text-ellipsis;
-          width: 174px;
-        }
-        .timeago {
-          margin-top: -2px;
-          font-size: $fs12;
-          color: $color-gray-30;
-        }
-      }
-
-      .avatar {
-        display: flex;
-        align-items: center;
-        padding-right: 6px;
-
-        img {
-          border-radius: 50%;
-          flex-shrink: 0;
-          height: 24px;
-          width: 24px;
-        }
-      }
-
-      .options-resolve {
-        position: absolute;
-        right: 20px;
-        top: 0px;
-        width: 16px;
-        height: 16px;
-
-        cursor: pointer;
-
-        svg {
-          width: 16px;
-          height: 16px;
-          fill: $color-gray-30;
-        }
-      }
-
-      .options {
-        position: absolute;
-        right: -2px;
-        top: 2px;
-        height: 16px;
-        display: flex;
-        align-items: center;
-        cursor: pointer;
-
-        .options-icon {
-          svg {
-            width: 14px;
-            height: 14px;
-            fill: $color-black;
-          }
-        }
-      }
-    }
-
-    .content {
-      margin: $size-4 0;
-      font-size: $fs14;
-      color: $color-black;
-      .text {
-        margin: 0 $size-2 0 26px;
-        white-space: pre-wrap;
-        display: inline-block;
-        word-break: break-word;
-      }
-    }
-  }
-
-  .comment-options-dropdown {
-    top: 7px;
-    right: 7px;
-    width: 150px;
-
-    border: 1px solid #b1b2b5;
-  }
-}
-
-.workspace-comment-threads-sidebar-header {
-  display: flex;
-  background-color: $color-black;
-  height: 34px;
-  align-items: center;
-  padding: 0px 9px;
-  color: $color-gray-10;
-  font-size: $fs12;
-  justify-content: space-between;
-
-  .options {
-    display: flex;
-    margin-right: 3px;
-    cursor: pointer;
-
-    .label {
-      padding-right: 8px;
-    }
-
-    .icon {
-      display: flex;
-      align-items: center;
-    }
-
-    svg {
-      fill: $color-gray-10;
-      width: 10px;
-      height: 10px;
-    }
-  }
-
-  .dropdown {
-    top: 80px;
-    right: 7px;
-  }
-}
-
-.comment-threads-section {
-  pointer-events: auto;
-
-  .thread-groups {
-    height: calc(100% - 34px);
-    overflow-y: scroll;
-    hr {
-      border: 0;
-      height: 1px;
-      background-color: $color-gray-30;
-      margin: 0px 0px;
-    }
-  }
-
-  .thread-group {
-    display: flex;
-    flex-direction: column;
-    font-size: $fs12;
-
-    .section-title {
-      margin: 0px 10px;
-      margin-top: 15px;
-
-      .icon {
-        margin-right: 4px;
-      }
-
-      .label {
-        &.filename {
-          font-weight: $fw700;
-        }
-      }
-
-      svg {
-        fill: $color-gray-10;
-        height: 10px;
-        width: 10px;
-      }
-    }
-  }
-
-  .thread-bubble {
-    position: unset;
-    transform: unset;
-    width: 24px;
-    height: 24px;
-    margin-right: 6px;
-    box-shadow: unset;
-  }
-
-  .comment {
-    cursor: pointer;
-    .author {
-      margin-bottom: $size-4;
-      .name {
-        display: flex;
-
-        .fullname {
-          width: unset;
-          max-width: 170px;
-          color: $color-gray-20;
-          padding-right: 3px;
-        }
-        .timeago {
-          margin-top: unset;
-          color: $color-gray-20;
-        }
-      }
-    }
-
-    .content {
-      margin-top: 0px;
-      color: $color-white;
-
-      &.replies {
-        margin: 0 $size-2 0 26px;
-        display: flex;
-        .total-replies {
-          margin-right: 9px;
-          color: $color-info;
-        }
-
-        .new-replies {
-          color: $color-primary;
-        }
-      }
-    }
-  }
-}
-
-.viewer-comments-container {
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-}
-
-.workspace-comments-container {
-  width: 100%;
-  height: 100%;
-  grid-column: 1 / span 2;
-  grid-row: 1 / span 2;
-  z-index: 1000;
-  pointer-events: none;
-  overflow: hidden;
-  user-select: text;
-
-  .threads {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-  }
-}
+@use "common/refactor/common-refactor.scss" as *;
 
 .dashboard-comments-section {
-  width: 25px;
-  height: 25px;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: $color-dashboard;
-  border-radius: $br3;
   position: relative;
+  border-radius: $br-8;
 
-  .button {
-    width: 25px;
-    height: 25px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: $color-dashboard;
-    border-radius: $br3;
-
-    svg {
-      width: 15px;
-      height: 15px;
-    }
-
-    &.unread {
-      background-color: $color-warning;
-      svg {
-        fill: #2e3434;
-      }
-    }
-
-    &.open {
-      background-color: $color-black;
-      svg {
-        fill: $color-primary;
-      }
-    }
+  button {
+    cursor: pointer;
+    background: none;
+    border: none;
   }
+}
 
-  .dropdown {
-    width: 280px;
-    bottom: 35px;
-    left: 0px;
+.thread-groups {
+  height: calc(100% - $s-32);
+  overflow-y: scroll;
+  max-height: $s-440;
+  overflow: auto;
+
+  hr {
+    background-color: $df-primary;
+    border: 0;
+    height: $s-1;
+    margin: 0;
   }
+}
 
-  .header {
-    display: flex;
-    height: 40px;
-    align-items: center;
-    padding: 0px 11px;
-
-    h3 {
-      font-weight: $fw400;
-      color: $color-black;
-      font-size: $fs14;
-      // line-height: $lh-128; // Original value was $fs18 => 1.125rem = 18px; 18px/14px = 128.571428571% => $lh-128 (rounded)
-      flex-grow: 1;
-    }
-
-    .close {
-      display: flex;
-      align-items: center;
-    }
-
-    svg {
-      width: 15px;
-      height: 15px;
-      transform: rotate(45deg);
-    }
-  }
-
-  .thread-groups {
-    max-height: calc(30rem - 40px);
-    overflow: auto;
-
-    hr {
-      background-color: $color-gray-10;
-    }
-  }
-
-  .thread-group .section-title {
-    color: $color-black;
-  }
-
-  .comment {
-    .author .name .fullname {
-      color: $color-gray-40;
-    }
-    .content {
-      color: $color-black;
-    }
-  }
+.thread-group {
+  display: flex;
+  flex-direction: column;
+  font-size: $fs-12;
 }
 
 .thread-groups-placeholder {
   align-items: center;
   display: flex;
   flex-direction: column;
-  font-size: $fs12;
-  padding: $size-5;
+  font-size: $fs-12;
+  padding: $s-24;
   text-align: center;
 
   svg {
-    fill: $color-gray-20;
-    height: 24px;
-    margin-bottom: $size-5;
-    width: 24px;
+    fill: $df-secondary;
+    height: $s-24;
+    margin-bottom: $s-24;
+    width: $s-24;
   }
 }
 
-.dashboard-comments-section {
-  border-color: transparent;
-  border-radius: 8px;
-  background-color: $db-primary;
-  height: 32px;
-  width: 32px;
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: $br-8;
+  height: $s-32;
+  width: $s-32;
 
-  .button {
-    border-radius: 8px;
-    background-color: $db-primary;
-    height: 32px;
-    width: 32px;
+  svg {
+    width: $s-16;
+    height: $s-16;
+    fill: $df-secondary;
+  }
+
+  &.unread svg,
+  &.open svg {
+    fill: $da-tertiary;
+  }
+
+  &:hover {
+    background-color: $db-cuaternary;
 
     svg {
-      fill: $df-secondary;
+      fill: $da-primary;
     }
+  }
+}
 
-    &:hover {
-      background-color: $db-cuaternary;
+.dropdown {
+  background-color: $db-tertiary;
+  border-radius: $br-8;
+  border: $s-1 solid transparent;
+  bottom: $s-4;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.25);
+  height: 40vh;
+  max-height: $s-480;
+  min-height: $s-200;
+  position: absolute;
+  width: 100%;
+  z-index: 12;
 
-      svg {
-        fill: $da-primary;
-      }
+  hr {
+    margin: 0;
+    border-color: $df-secondary;
+  }
+}
+
+.header {
+  display: flex;
+  height: $s-40;
+  align-items: center;
+  padding: 0 $s-12;
+
+  h3 {
+    color: $df-secondary;
+    font-size: $fs-11;
+    line-height: 1.28;
+    flex-grow: 1;
+    text-transform: uppercase;
+  }
+
+  .close {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    svg {
+      width: $s-16;
+      height: $s-16;
+      transform: rotate(45deg);
+      fill: $df-secondary;
     }
   }
 }
