--- a/frontend/src/app/main/ui/dashboard/files.scss
+++ b/frontend/src/app/main/ui/dashboard/files.scss
@@ -1,237 +1,28 @@
-@import "common/dependencies/colors";
+// This Source Code Form is subject to the terms of the Mozilla Public
+// License, v. 2.0. If a copy of the MPL was not distributed with this
+// file, You can obtain one at http://mozilla.org/MPL/2.0/.
+//
+// Copyright (c) KALEIDOS INC
 
-// FIXME: Mostly duplcated from projects.css
-
-$br3: 3px;
-$fs14: 0.875rem;
-$fs18: 1.125rem;
-$fs22: 1.375rem;
-$fw400: 400;
-$fw600: 600;
-$lh-088: 0.88;
-$lh-115: 1.15; // original $title-lh-sm
-$size-1: 0.25rem;
-$size-2: 0.5rem;
-$size-4: 1rem;
-$size-5: 1.5rem;
-$size-6: 2rem;
+@use "common/refactor/common-refactor.scss" as *;
+@use "common/refactor/common-dashboard";
 
 .dashboard-container {
-  background-color: $color-dashboard;
   flex: 1 0 0;
-  margin-right: $size-4;
+  margin-right: $s-16;
   overflow-y: auto;
   width: 100%;
+  border-top: $s-1 solid $db-cuaternary;
+
   &.dashboard-projects {
     user-select: none;
   }
-  &.no-bg {
-    background-color: transparent;
-  }
   &.dashboard-shared {
-    width: calc(100vw - 320px);
-    margin-right: 50px;
+    width: calc(100vw - $s-320);
+    margin-right: $s-52;
   }
 
   &.search {
-    margin-top: 10px;
-  }
-}
-
-.dashboard-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background-color: $color-white;
-  height: 63px;
-  padding: $size-1 $size-4 $size-1 $size-2;
-  position: relative;
-  z-index: 10;
-  user-select: none;
-  &.team {
-    display: grid;
-    grid-template-columns: 20% 1fr 20%;
-  }
-
-  .element-name {
-    margin-right: $size-2;
-  }
-
-  .btn-secondary {
-    flex-shrink: 0;
-    z-index: 10;
-    height: 32px;
-  }
-
-  svg {
-    fill: $color-black;
-    height: 14px;
-    margin-right: $size-1;
-    width: 14px;
-  }
-
-  nav {
-    display: flex;
-    align-items: flex-end;
-    justify-content: center;
-    z-index: 1;
-
-    ul {
-      display: flex;
-      font-size: $fs14;
-      justify-content: center;
-      margin: 0;
-    }
-
-    li {
-      a {
-        display: flex;
-        align-items: center;
-        flex-basis: 140px;
-        border-bottom: 3px solid transparent;
-        color: $color-gray-30;
-        height: 40px;
-        padding: $size-1 $size-5;
-        font-weight: $fw400;
-        &:hover {
-          color: $color-black;
-          text-decoration: none;
-        }
-      }
-
-      &.active {
-        a {
-          color: $color-black;
-          border-color: $color-primary;
-        }
-      }
-    }
-  }
-
-  .dashboard-title {
-    display: flex;
-    align-items: center;
-    margin-left: 13px;
-
-    h1 {
-      color: $color-black;
-      display: flex;
-      flex-shrink: 0;
-      font-size: $fs22;
-      font-weight: $fw600;
-      z-index: 10;
-      user-select: all;
-    }
-
-    .context-menu.is-open {
-      margin-top: 10px;
-    }
-  }
-
-  .icon {
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    margin-left: $size-2;
-    z-index: 10;
-
-    svg {
-      fill: $color-gray-40;
-      width: 15px;
-      height: 15px;
-
-      &:hover {
-        fill: $color-primary-dark;
-      }
-    }
-  }
-
-  .dashboard-buttons {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-  }
-
-  .dashboard-header-actions {
-    display: flex;
-  }
-
-  .pin-icon {
-    margin: 0 $size-2 0 $size-5;
-    background-color: transparent;
-    border: none;
-    svg {
-      fill: $color-gray-20;
-    }
-
-    &.active {
-      svg {
-        fill: $color-gray-50;
-      }
-    }
-  }
-}
-
-.dashboard-header {
-  background-color: transparent;
-  .dashboard-title {
-    h1 {
-      color: $df-primary;
-      font-size: 24px;
-      font-weight: 400;
-      width: 100%;
-      text-overflow: ellipsis;
-      overflow: hidden;
-      white-space: nowrap;
-      display: block;
-      max-width: 700px;
-    }
-  }
-  .icon {
-    svg {
-      fill: $df-secondary;
-    }
-  }
-
-  // Settings sub-menu
-  .dashboard-header-options {
-    li {
-      a {
-        font-size: 16px;
-        color: $df-secondary;
-        border-color: transparent;
-        &:hover {
-          color: $df-primary;
-        }
-      }
-      &.active {
-        a {
-          color: $df-primary;
-        }
-      }
-    }
-  }
-}
-
-.btn-secondary {
-  background-color: $db-tertiary;
-  text-transform: uppercase;
-  border: none;
-  color: $df-primary;
-  border-radius: 8px;
-
-  font-size: 0.75rem;
-  padding: 0 1rem;
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  &:hover {
-    background-color: $db-cuaternary;
-    color: $da-primary;
-    svg {
-      fill: $da-primary;
-    }
+    margin-top: $s-12;
   }
 }
