--- a/frontend/src/app/main/ui/dashboard/placeholder.scss
+++ b/frontend/src/app/main/ui/dashboard/placeholder.scss
@@ -1,25 +1,34 @@
-@import "common/dependencies/colors";
+// This Source Code Form is subject to the terms of the Mozilla Public
+// License, v. 2.0. If a copy of the MPL was not distributed with this
+// file, You can obtain one at http://mozilla.org/MPL/2.0/.
+//
+// Copyright (c) KALEIDOS INC
 
-$br0: 0;
-$br3: 3px;
-$br12: 12px;
-$fs16: 1rem;
+@use "common/refactor/common-refactor.scss" as *;
+@use "./grid.scss";
 
 .grid-empty-placeholder {
-  border-radius: $br12;
+  border-radius: $br-12;
   display: grid;
-  background-color: rgba(227, 227, 227, 0.3);
-  padding: 13px;
-  margin-right: 13px;
-  height: 230px;
+  padding: $s-12;
+  margin-right: $s-12;
+  height: $s-232;
+
   &.loader {
     justify-items: center;
   }
+
   .icon {
     display: flex;
     align-items: center;
     justify-content: center;
+    svg {
+      width: $s-64;
+      height: $s-64;
+      fill: $df-secondary;
+    }
   }
+
   &.libs {
     background-image: url(/images/ph-left.svg), url(/images/ph-right.svg);
     background-position:
@@ -27,86 +36,57 @@ $fs16: 1rem;
       85% top;
     background-repeat: no-repeat;
     align-items: center;
-    border: 1px dashed #b1b2b5;
-    border-radius: $br3;
+    border: $s-1 solid $db-cuaternary;
+    border-radius: $br-4;
     display: flex;
     flex-direction: column;
-    height: 200px;
-    margin: 1rem;
-    padding: 3rem;
+    height: $s-200;
+    margin: $s-16;
+    padding: $s-48;
     justify-content: center;
+
     .text {
+      a {
+        color: $df-primary;
+      }
       p {
-        max-width: 360px;
+        max-width: $s-360;
         text-align: center;
-        font-size: $fs16;
+        font-size: $fs-16;
       }
     }
   }
-  .create-new {
-    background-color: white;
-    border: 2px solid $color-gray-10;
-    border-radius: $br3;
-    color: $color-black;
-    cursor: pointer;
-    height: 158px;
-    font-family: "worksans", sans-serif;
-    margin: 0.5rem;
-    &:hover {
-      border: 2px solid $color-primary;
-    }
-  }
-
-  &.search {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    height: 200px;
-    background: $color-white;
-    border: 1px dashed #e3e3e3;
-    border-radius: $br0;
-  }
-
-  svg {
-    width: 36px;
-    height: 36px;
-    fill: $color-gray-20;
-  }
-
-  .text {
-    margin-top: 10px;
-    color: $color-gray-30;
-    font-size: $fs16;
-  }
-}
-
-.grid-empty-placeholder {
-  background-color: transparent;
 
   .create-new {
     background-color: $db-tertiary;
-    border-radius: 8px;
-    border: none;
+    border-radius: $br-8;
     color: $df-primary;
+    cursor: pointer;
+    height: $s-160;
+    margin: $s-8;
     text-transform: uppercase;
+    border: $s-2 solid transparent;
+
+    svg {
+      width: $s-32;
+      height: $s-32;
+      stroke: $df-secondary;
+    }
 
     &:hover {
+      border: $s-2 solid $da-tertiary;
       background-color: $db-cuaternary;
       color: $da-primary;
+
+      svg {
+        stroke: $da-tertiary;
+      }
     }
   }
 
-  &.search {
-    border: 1px solid $db-cuaternary;
-    border-radius: 8px;
-    .text {
-      color: $df-primary;
-    }
-    .icon {
-      svg {
-        fill: $df-secondary;
-      }
-    }
+  .text {
+    margin-top: $s-12;
+    color: $df-secondary;
+    font-size: $fs-16;
   }
 }
