--- a/frontend/src/app/main/ui/dashboard/sidebar.scss
+++ b/frontend/src/app/main/ui/dashboard/sidebar.scss
@@ -1,20 +1,20 @@
-@import "common/dependencies/colors";
-$fs14: 0.875rem;
-$fs12: 0.75rem;
-$fw400: 400;
-$size-2: 0.5rem;
-$size-3: 0.75rem;
-$size-4: 1rem;
-$br3: 3px;
+// This Source Code Form is subject to the terms of the Mozilla Public
+// License, v. 2.0. If a copy of the MPL was not distributed with this
+// file, You can obtain one at http://mozilla.org/MPL/2.0/.
+//
+// Copyright (c) KALEIDOS INC
+
+@use "common/refactor/common-refactor.scss" as *;
+@use "common/refactor/common-dashboard";
 
 .dashboard-sidebar {
   grid-row: 1 / span 2;
   grid-column: 1 / span 2;
 
   background-color: $db-primary;
-  border-right: 1px solid $db-cuaternary;
-  margin: 0 1rem 0 0;
-  padding: 1rem 0 0 0;
+  border-right: $s-1 solid $db-cuaternary;
+  margin: 0 $s-16 0 0;
+  padding: $s-16 0 0 0;
 
   z-index: 1;
   display: flex;
@@ -31,31 +31,22 @@ $br3: 3px;
 
   hr {
     border-color: transparent;
-    margin: 0.8rem 15px;
-  }
-
-  .back-to-dashboard {
-    .icon svg {
-      fill: $df-secondary;
-    }
-    .text {
-      color: $df-primary;
-    }
+    margin: $s-12 $s-16;
   }
 }
 
 .sidebar-team-switch {
   position: relative;
   display: flex;
-  margin: 5px 15px;
+  margin: $s-4 $s-16;
 
   .switch-content {
     background-color: $db-tertiary;
-    border-radius: 8px;
-    height: 48px;
+    border-radius: $br-8;
+    height: $s-48;
     display: flex;
     width: 100%;
-    border: 1px solid transparent;
+    border: $s-1 solid transparent;
     align-items: center;
 
     svg {
@@ -70,8 +61,8 @@ $br3: 3px;
 
     svg {
       fill: $df-secondary;
-      width: 10px;
-      height: 10px;
+      width: $s-12;
+      height: $s-12;
     }
   }
 
@@ -81,23 +72,23 @@ $br3: 3px;
     display: flex;
     align-items: center;
     flex-grow: 1;
-    font-size: 0.875rem;
-    padding: 0px 10px;
+    font-size: $fs-14;
+    padding: 0 $s-12;
     background-color: transparent;
     border: none;
-    border-right: 1px solid $db-primary;
+    border-right: $s-1 solid $db-primary;
   }
 
   .team-name {
     flex-grow: 1;
     display: flex;
-    height: 40px;
+    height: $s-40;
     align-items: center;
   }
 
   .team-text {
     color: $df-primary;
-    width: 145px;
+    width: $s-144;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
@@ -107,26 +98,26 @@ $br3: 3px;
   .team-icon {
     display: flex;
     align-items: center;
-    padding-right: 10px;
+    padding-right: $s-12;
 
     img {
       border-radius: 50%;
       flex-shrink: 0;
-      height: 23px;
-      width: 23px;
+      height: $s-24;
+      width: $s-24;
     }
 
     svg {
-      width: 23px;
-      height: 23px;
+      width: $s-24;
+      height: $s-24;
     }
   }
 
   .switch-options {
     display: flex;
-    max-width: 22px;
-    min-width: 28px;
-    border-left: 1px solid #e3e3e3;
+    max-width: $s-24;
+    min-width: $s-28;
+    border-left: $s-1 solid $df-primary;
     justify-content: center;
     align-items: center;
     cursor: pointer;
@@ -135,16 +126,16 @@ $br3: 3px;
 
     svg {
       fill: $df-secondary;
-      width: 15px;
-      height: 13px;
+      width: $s-16;
+      height: $s-12;
     }
   }
 
   .dropdown {
-    right: 2px;
-    top: 50px;
-    min-width: 162px;
-    max-height: 30rem;
+    right: $s-2;
+    top: $s-52;
+    min-width: $s-160;
+    max-height: $s-480;
   }
 }
 
@@ -152,36 +143,36 @@ $br3: 3px;
   position: absolute;
   z-index: 12;
   background-color: $db-tertiary;
-  border: 1px solid $db-cuaternary;
-  border-radius: 8px;
+  border: $s-1 solid $db-cuaternary;
+  border-radius: $br-8;
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.25);
 
   .separator {
     border-color: transparent;
-    margin-top: 10px;
+    margin-top: $s-12;
   }
 
   li {
-    border-radius: 8px;
-    height: 40px;
-    margin: 5px;
+    border-radius: $br-8;
+    height: $s-40;
+    margin: $s-6;
 
     display: flex;
     align-items: center;
     cursor: pointer;
-    font-size: 0.875rem;
-    padding: 5px 16px;
+    font-size: $fs-14;
+    padding: $s-6 $s-16;
 
     .warning {
-      color: #e65244;
+      color: var(--dark-warning-color);
     }
 
     &:hover {
       background-color: $db-cuaternary;
     }
     svg {
-      height: 12px;
-      width: 12px;
+      height: $s-12;
+      width: $s-12;
     }
   }
 
@@ -194,7 +185,7 @@ $br3: 3px;
     li {
       color: $df-primary;
       &.warning {
-        color: $color-danger;
+        color: var(--dark-warning-color);
       }
     }
   }
@@ -202,22 +193,22 @@ $br3: 3px;
 
 .teams-dropdown {
   background-color: $db-tertiary;
-  border-radius: 8px;
-  border: 1px solid $db-cuaternary;
-  min-width: 248px;
+  border-radius: $br-8;
+  border: $s-1 solid $db-cuaternary;
+  min-width: $s-248;
 
   left: 0;
-  top: 50px;
+  top: $s-52;
   z-index: 12;
-  max-height: 30rem;
+  max-height: $s-480;
   overflow-x: hidden;
   overflow-y: auto;
 
   li {
-    border-radius: 8px;
-    height: 42px;
-    padding: 0 5px;
-    margin: 5px;
+    border-radius: $br-8;
+    height: $s-40;
+    padding: 0 $s-6;
+    margin: $s-6;
 
     svg {
       fill: $df-secondary;
@@ -240,7 +231,7 @@ $br3: 3px;
     }
     .team-text {
       color: $df-primary;
-      width: 165px;
+      width: $s-168;
     }
 
     .new-team {
@@ -251,14 +242,14 @@ $br3: 3px;
       .team-icon {
         background-color: #2e3434;
         border-radius: 50%;
-        height: 24px;
-        margin-right: 10px;
-        padding: 6px;
-        width: 24px;
+        height: $s-24;
+        margin-right: $s-12;
+        padding: $s-6;
+        width: $s-24;
 
         svg {
-          height: 12px;
-          width: 12px;
+          height: $s-12;
+          width: $s-12;
         }
       }
     }
@@ -266,52 +257,52 @@ $br3: 3px;
 }
 
 .sidebar-empty-placeholder {
-  padding: 10px 12px;
+  padding: $s-12;
   color: $df-secondary;
   display: flex;
   align-items: flex-start;
 
   .icon {
-    padding: 0px 10px;
+    padding: 0 $s-12;
     svg {
-      fill: $color-gray-30;
-      width: 12px;
-      height: 12px;
+      fill: $df-secondary;
+      width: $s-12;
+      height: $s-12;
     }
   }
   .text {
-    font-size: $fs12;
+    font-size: $fs-12;
   }
 }
 
 .sidebar-search {
   align-items: center;
-  border: 1px solid transparent;
+  border: $s-1 solid transparent;
   display: flex;
-  margin: 5px 15px;
+  margin: $s-6 $s-16;
 
   background-color: $db-tertiary;
-  border-radius: 8px;
-  margin-bottom: 2rem;
+  border-radius: $br-8;
+  margin-bottom: $s-32;
   margin-top: 0;
   position: relative;
 
   .input-text {
     background: transparent;
     border: 0;
-    font-size: 0.875rem;
+    font-size: $fs-14;
     margin: 0;
     width: 100%;
-    height: 40px;
+    height: $s-40;
 
-    border-radius: 8px;
+    border-radius: $br-8;
     color: $df-primary;
     max-width: 100%;
-    padding: 6px 10px;
+    padding: $s-6 $s-12;
 
     &:focus,
     &:focus-within {
-      border: 1px solid $da-primary;
+      border: $s-1 solid $da-primary;
     }
   }
   ::placeholder {
@@ -323,19 +314,19 @@ $br3: 3px;
     align-items: center;
     cursor: pointer;
     display: flex;
-    height: 22px;
+    height: $s-24;
     margin-left: auto;
-    padding: 0 0.5rem;
-    width: 32px;
+    padding: 0 $s-8;
+    width: $s-32;
 
     position: absolute;
-    top: 10px;
-    right: 2px;
+    top: $s-12;
+    right: $s-2;
 
     svg {
-      fill: $color-gray-30;
-      height: 15px;
-      width: 15px;
+      fill: $df-secondary;
+      height: $s-16;
+      width: $s-16;
     }
   }
 
@@ -343,7 +334,7 @@ $br3: 3px;
     transform: rotate(45deg);
 
     &:hover {
-      fill: $color-danger;
+      fill: var(--warning-color);
     }
   }
 }
@@ -364,7 +355,7 @@ $br3: 3px;
     cursor: pointer;
     display: flex;
     flex-shrink: 0;
-    padding: 0.6rem 0.6rem 0.6rem 1.4rem;
+    padding: $s-8 $s-8 $s-8 $s-24;
     a {
       font-weight: $fw400;
       width: 100%;
@@ -374,15 +365,15 @@ $br3: 3px;
     }
 
     svg {
-      fill: $color-black;
-      margin-right: 8px;
-      height: $size-3;
-      width: $size-3;
+      fill: $db-secondary;
+      margin-right: $s-8;
+      height: $s-12;
+      width: $s-12;
     }
 
     .element-title {
       color: $df-secondary;
-      font-size: $fs14;
+      font-size: $fs-14;
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
@@ -390,42 +381,35 @@ $br3: 3px;
 
     &.recent-projects {
       svg {
-        fill: $color-white;
+        fill: $df-primary;
       }
-    }
-
-    & .edit-wrapper {
-      border: 1px solid $color-gray-10;
-      border-radius: $br3;
-      display: flex;
-      width: 100%;
     }
 
     input.element-title {
       border: 0;
-      height: 30px;
-      padding: 5px;
+      height: $s-32;
+      padding: $s-6;
       margin: 0;
       width: 100%;
-      background-color: $color-white;
+      background-color: $df-primary;
     }
 
     .close {
-      background-color: $color-white;
+      background-color: $df-primary;
       cursor: pointer;
-      padding-left: 5px;
+      padding-left: $s-6;
 
       svg {
-        fill: $color-gray-30;
-        height: 15px;
+        fill: $df-secondary;
+        height: $s-16;
         transform: rotate(45deg) translateY(7px);
-        width: 15px;
+        width: $s-16;
         margin: 0;
       }
     }
 
     .element-subtitle {
-      color: $color-gray-20;
+      color: $df-secondary;
       font-style: italic;
     }
 
@@ -446,11 +430,11 @@ $br3: 3px;
   align-items: center;
   cursor: pointer;
   display: flex;
-  padding: 10px 15px;
+  padding: $s-12 $s-16;
   position: relative;
 
   background-color: $db-tertiary;
-  border-top: 1px solid $db-cuaternary;
+  border-top: $s-1 solid $db-cuaternary;
 
   .profile {
     align-items: center;
@@ -459,56 +443,56 @@ $br3: 3px;
     flex-grow: 1;
 
     span {
-      // @include text-ellipsis;
+      @include text-ellipsis;
       color: $df-primary;
-      margin: 10px;
-      font-size: $fs14;
-      max-width: 160px;
+      margin: $s-12;
+      font-size: $fs-14;
+      max-width: $s-160;
     }
 
     img {
       border-radius: 50%;
       flex-shrink: 0;
-      height: 25px;
-      width: 25px;
+      height: $s-40;
+      width: $s-40;
     }
     svg {
-      height: 10px;
+      height: $s-12;
       margin-left: auto;
-      margin-right: $size-2;
-      width: 10px;
+      margin-right: $s-8;
+      width: $s-12;
     }
   }
 
   .dropdown {
-    left: 15px;
-    bottom: 45px;
+    left: $s-16;
+    bottom: $s-44;
 
-    background-color: #212426;
-    border: 1px solid #2e3434;
-    border-radius: 8px;
-    min-width: 252px;
+    background-color: $db-primary;
+    border: $s-1 solid $db-tertiary;
+    border-radius: $br-8;
+    min-width: $s-252;
 
-    // @include animation(0, 0.2s, fadeInUp);
+    @include animation(0, 0.2s, fadeInUp);
 
     li {
-      font-size: $fs14;
-      padding: $size-2 $size-4;
+      font-size: $fs-14;
+      padding: $s-8 $s-16;
 
       svg {
-        fill: $color-gray-20;
-        margin-right: $size-2;
+        fill: $df-secondary;
+        margin-right: $s-8;
 
-        height: 12px;
-        width: 12px;
+        height: $s-12;
+        width: $s-12;
       }
 
       .text {
-        color: #ffffff;
+        color: $df-primary;
       }
 
       &.separator {
-        border-top: 1px solid transparent;
+        border-top: $s-1 solid transparent;
       }
     }
   }
