--- a/frontend/src/app/main/ui/settings/options.scss
+++ b/frontend/src/app/main/ui/settings/options.scss
@@ -1,642 +1,7 @@
-@import "common/dependencies/colors";
-
-$br3: 3px;
-$br4: 4px;
-$br8: 8px;
-$br6: 6px;
-$fs12: 0.75rem;
-$fs14: 0.875rem;
-$fs16: 1rem;
-$fs18: 1.125rem;
-$fs22: 1.375rem;
-$fs24: 1.5rem;
-$fs36: 2.25rem;
-$fw400: 400;
-$fw500: 500;
-$fw600: 600;
-$fw700: 700;
-$lh-088: 0.88;
-$lh-115: 1.15; // original $title-lh-sm
-$lh-500: 5; // original $title-lh-sm
-$size-1: 0.25rem;
-$size-2: 0.5rem;
-$size-4: 1rem;
-$size-5: 1.5rem;
-$size-6: 2rem;
-
-.form-container,
-.generic-form {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-
-  .forms-container {
-    display: flex;
-    margin-top: 40px;
-    width: 536px;
-    justify-content: center;
-  }
-
-  form {
-    display: flex;
-    flex-direction: column;
-    // flex-basis: 368px;
-  }
-
-  .fields-row {
-    margin-bottom: 20px;
-    flex-direction: column;
-
-    .options {
-      display: flex;
-      justify-content: flex-end;
-      font-size: $fs14;
-      margin-top: 13px;
-    }
-  }
-
-  .field {
-    margin-bottom: 20px;
-  }
-
-  h1 {
-    font-size: $fs36;
-    color: #2c233e;
-    margin-bottom: 20px;
-  }
-
-  .subtitle {
-    font-size: $fs24;
-    color: #2c233e;
-    margin-bottom: 20px;
-  }
-
-  .notification-icon {
-    justify-content: center;
-    display: flex;
-    margin-bottom: 3rem;
-
-    svg {
-      fill: $color-gray-60;
-      height: 40%;
-      width: 40%;
-    }
-  }
-
-  .notification-text {
-    font-size: $fs18;
-    color: $color-gray-60;
-    margin-bottom: 20px;
-  }
-
-  .notification-text-email {
-    background: $color-gray-10;
-    border-radius: $br3;
-    color: $color-gray-60;
-    font-size: $fs18;
-    font-weight: $fw500;
-    margin: 1.5rem 0 2.5rem 0;
-    padding: 1rem;
-    text-align: center;
-  }
-
-  h2 {
-    font-size: $fs24;
-    color: $df-primary;
-    // height: 40px;
-    display: flex;
-    align-items: center;
-  }
-
-  a {
-    &:hover {
-      text-decoration: underline;
-    }
-  }
-
-  p {
-    color: $color-gray-60;
-  }
-
-  hr {
-    border-color: $color-gray-20;
-  }
-}
-
-.dashboard-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background-color: $color-white;
-  height: 63px;
-  padding: $size-1 $size-4 $size-1 $size-2;
-  position: relative;
-  z-index: 10;
-  user-select: none;
-  &.team {
-    display: grid;
-    grid-template-columns: 20% 1fr 20%;
-  }
-
-  .element-name {
-    margin-right: $size-2;
-  }
-
-  .btn-secondary {
-    flex-shrink: 0;
-    z-index: 10;
-    height: 32px;
-    svg {
-      height: 16px;
-      width: 16px;
-    }
-  }
-
-  svg {
-    fill: $color-black;
-    height: 14px;
-    margin-right: $size-1;
-    width: 14px;
-  }
-
-  nav {
-    display: flex;
-    align-items: flex-end;
-    justify-content: center;
-    z-index: 1;
-
-    ul {
-      display: flex;
-      font-size: $fs14;
-      justify-content: center;
-      margin: 0;
-    }
-
-    li {
-      a {
-        display: flex;
-        align-items: center;
-        flex-basis: 140px;
-        border-bottom: 3px solid transparent;
-        color: $color-gray-30;
-        height: 40px;
-        padding: $size-1 $size-5;
-        font-weight: $fw400;
-        &:hover {
-          color: $color-black;
-          text-decoration: none;
-        }
-      }
-
-      &.active {
-        a {
-          color: $color-black;
-          border-color: $color-primary;
-        }
-      }
-    }
-  }
-
-  .dashboard-title {
-    display: flex;
-    align-items: center;
-    margin-left: 13px;
-
-    h1 {
-      color: $color-black;
-      display: flex;
-      flex-shrink: 0;
-      font-size: $fs22;
-      font-weight: $fw600;
-      z-index: 10;
-      user-select: all;
-    }
-
-    .context-menu.is-open {
-      margin-top: 10px;
-    }
-  }
-
-  .icon {
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    margin-left: $size-2;
-    z-index: 10;
-
-    svg {
-      fill: $color-gray-40;
-      width: 15px;
-      height: 15px;
-
-      &:hover {
-        fill: $color-primary-dark;
-      }
-    }
-  }
-
-  .dashboard-buttons {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-  }
-
-  .dashboard-header-actions {
-    display: flex;
-  }
-
-  .pin-icon {
-    margin: 0 $size-2 0 $size-5;
-    background-color: transparent;
-    border: none;
-    svg {
-      fill: $color-gray-20;
-    }
-
-    &.active {
-      svg {
-        fill: $color-gray-50;
-      }
-    }
-  }
-}
-
-.dashboard-settings {
-  display: flex;
-  width: 100%;
-  justify-content: center;
-  align-items: center;
-
-  .form-container {
-    margin-top: 50px;
-    display: flex;
-    max-width: 368px;
-    margin-bottom: 2rem;
-    width: 100%;
-
-    &.two-columns {
-      max-width: 536px;
-      justify-content: space-between;
-      flex-direction: row;
-    }
-
-    h2 {
-      margin-bottom: 1rem;
-    }
-  }
-
-  .avatar-form {
-    display: flex;
-    flex-direction: column;
-    width: 120px;
-    min-width: 120px;
-
-    img {
-      border-radius: 50%;
-      flex-shrink: 0;
-      height: 120px;
-      margin-right: $size-4;
-      width: 120px;
-    }
-
-    .image-change-field {
-      position: relative;
-      width: 120px;
-      height: 120px;
-
-      .update-overlay {
-        opacity: 0;
-        cursor: pointer;
-        position: absolute;
-        width: 121px;
-        height: 121px;
-        border-radius: 50%;
-        font-size: $fs24;
-        color: $color-white;
-        line-height: $lh-500; // Original value was 120px; 120px/24px = 500% => $lh-500
-        text-align: center;
-        background: $color-primary-dark;
-        z-index: 14;
-      }
-
-      input[type="file"] {
-        width: 120px;
-        height: 120px;
-        position: absolute;
-        opacity: 0;
-        cursor: pointer;
-        top: 0;
-        z-index: 15;
-      }
-
-      &:hover {
-        .update-overlay {
-          opacity: 0.8;
-        }
-      }
-    }
-  }
-
-  .profile-form {
-    display: flex;
-    flex-direction: column;
-    max-width: 368px;
-    width: 100%;
-
-    .newsletter-subs {
-      border-bottom: 1px solid $color-gray-20;
-      border-top: 1px solid $color-gray-20;
-      padding: 30px 0;
-      margin-bottom: 31px;
-
-      .newsletter-title {
-        font-family: "worksans", sans-serif;
-        color: $color-gray-30;
-        font-size: $fs14;
-      }
-
-      label {
-        font-family: "worksans", sans-serif;
-        color: $color-gray-60;
-        font-size: $fs12;
-        margin-right: -17px;
-        margin-bottom: 13px;
-      }
-
-      .info {
-        font-family: "worksans", sans-serif;
-        color: $color-gray-30;
-        font-size: $fs12;
-        margin-bottom: 8px;
-      }
-
-      .input-checkbox label {
-        align-items: flex-start;
-      }
-    }
-  }
-
-  .options-form,
-  .password-form {
-    h2 {
-      font-size: $fs14;
-      margin-bottom: 20px;
-    }
-  }
-}
-
-.dashboard-access-tokens {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  .access-tokens-hero-container {
-    max-width: 1000px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .access-tokens-hero {
-    font-size: $fs14;
-    padding: $size-6;
-    background-color: $color-white;
-    margin-top: $size-6;
-    display: flex;
-    justify-content: space-between;
-
-    .desc {
-      width: 80%;
-      color: $color-gray-40;
-      h2 {
-        margin-bottom: $size-4;
-        color: $color-black;
-      }
-      p {
-        font-size: $fs16;
-      }
-    }
-
-    .btn-primary {
-      flex-shrink: 0;
-    }
-  }
-
-  .access-tokens-empty {
-    text-align: center;
-    max-width: 1000px;
-    width: 100%;
-    padding: $size-6;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border: 1px dashed $color-gray-20;
-    color: $color-gray-40;
-    margin-top: 12px;
-    min-height: 136px;
-  }
-
-  .table-row {
-    background-color: $color-white;
-    display: grid;
-    grid-template-columns: 1fr 43% 12px;
-    height: 63px;
-    &:not(:first-child) {
-      margin-top: 8px;
-    }
-  }
-
-  .table-field {
-    &.name {
-      color: $color-gray-60;
-    }
-
-    &.expiration-date {
-      color: $color-gray-40;
-      font-size: $fs14;
-      .content {
-        padding: 2px 5px;
-        &.expired {
-          background-color: $color-warning-lighter;
-          border-radius: $br4;
-          color: $color-gray-40;
-        }
-      }
-    }
-
-    &.access-token-created {
-      word-break: break-all;
-    }
-
-    &.actions {
-      position: relative;
-    }
-  }
-}
-
-.access-tokens-modal {
-  .action-buttons {
-    gap: 10px;
-
-    .cancel-button {
-      border: 1px solid $color-gray-30;
-      background: $color-canvas;
-      border-radius: $br3;
-      padding: 0.5rem 1rem;
-      cursor: pointer;
-      margin-right: 8px;
-
-      &:hover {
-        background: $color-gray-20;
-      }
-    }
-  }
-  .access-token-created {
-    position: relative;
-    word-break: break-all;
-
-    .custom-input input {
-      background-color: $color-success-lighter;
-      border: 0;
-      padding: 0 0 0 15px;
-    }
-  }
-
-  .help-icon {
-    border: none;
-    height: 40px;
-    width: 40px;
-    position: absolute;
-    top: 0;
-    right: 0;
-    cursor: pointer;
-    background-color: $color-success-lighter;
-
-    svg {
-      fill: $color-gray-30;
-    }
-
-    &:hover {
-      svg {
-        fill: $color-gray-60;
-      }
-    }
-  }
-
-  .token-created-info {
-    font-size: $fs12;
-    color: $color-gray-40;
-  }
-}
-
-.dashboard-settings {
-  a {
-    color: $df-secondary;
-  }
-  .form-container {
-    width: 800px;
-    margin: 80px auto auto 120px;
-    form {
-      width: 468px;
-      .fields-row {
-        .custom-input,
-        .custom-select {
-          flex-direction: column-reverse;
-          label {
-            position: relative;
-            text-transform: uppercase;
-            color: $df-primary;
-            font-size: 11px;
-            margin-bottom: 12px;
-            margin-left: -4px;
-          }
-          input,
-          select {
-            background-color: $db-tertiary;
-            border-radius: 8px;
-            border-color: transparent;
-            color: $df-primary;
-            padding: 0 15px;
-            &:focus {
-              outline: 1px solid $da-primary;
-            }
-            ::placeholder {
-              color: $df-secondary;
-            }
-          }
-          .help-icon {
-            bottom: 12px;
-            top: auto;
-            svg {
-              fill: $df-secondary;
-            }
-          }
-          &.disabled {
-            input {
-              background-color: $db-primary;
-              border-color: $db-cuaternary;
-              color: $df-secondary;
-            }
-          }
-          .input-container {
-            background-color: $db-tertiary;
-            border-radius: 8px;
-            border-color: transparent;
-            margin-top: 22px;
-            .main-content {
-              label {
-                position: absolute;
-                top: -24px;
-              }
-              span {
-                color: $df-primary;
-              }
-            }
-            &:focus {
-              border: 1px solid $da-primary;
-            }
-          }
-          textarea {
-            border-radius: 8px;
-            padding: 12px 14px;
-            background-color: $db-tertiary;
-            color: $df-primary;
-            border: none;
-            &:focus {
-              outline: 1px solid $da-primary;
-            }
-          }
-        }
-      }
-      .field-title {
-        color: $df-primary;
-      }
-      .field-title:not(:first-child) {
-        margin-top: 64px;
-      }
-
-      .field-text {
-        color: $df-secondary;
-      }
-      button,
-      .btn-secondary {
-        width: 100%;
-        font-size: 11px;
-        text-transform: uppercase;
-        background-color: $db-tertiary;
-        color: $df-primary;
-        &:hover {
-          color: $da-primary;
-          background-color: $db-cuaternary;
-        }
-      }
-      hr {
-        display: none;
-      }
-    }
-    .links {
-      margin-top: 12px;
-    }
-  }
-}
+// This Source Code Form is subject to the terms of the Mozilla Public
+// License, v. 2.0. If a copy of the MPL was not distributed with this
+// file, You can obtain one at http://mozilla.org/MPL/2.0/.
+//
+// Copyright (c) KALEIDOS INC
+
+@use "./profile" as *;
